prototype statement based approach